--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -380,11 +380,11 @@ def env_tracers
   h = Hash.new { |h, k| h[k] = [] }
   backends = []
 
-  [%w[opencl cl libOpenCL] + [File.join(PKGLIBDIR,'opencl','libTracerOpenCL.so')],
-   %w[ze ze libze_loader] +  [File.join(PKGLIBDIR,'ze','libze_loader.so')],
-   %w[cuda cuda libcuda] +  [File.join(PKGLIBDIR,'cuda','libcuda.so')],
-   %w[hip hip libamdhip64] + [File.join(PKGLIBDIR,'hip', 'libamdhip64.so')],
-   %w[mpi mpi libmpi] + [File.join(PKGLIBDIR,'mpi','libTracerMPI.so')]].each do |name, bt_name, lib, libtracer|
+  [%w[opencl cl libOpenCL],
+   %w[ze ze libze_loader],
+   %w[cuda cuda libcuda],
+   %w[hip hip libamdhip64],
+   %w[mpi mpi libmpi]].each do |name, bt_name, lib|
     # Backend requested, skip omp. It will be handled in a custom case bellow
     next unless OPTIONS[:'backend-names'].include?(bt_name)
 
@@ -403,7 +403,7 @@ def env_tracers
     # Add our "stud" library to the path
     h[%w[LD_LIBRARY_PATH prepend]] << File.join(PKGLIBDIR, name)
     # Preload our own lib
-    h[%w[LD_PRELOAD prepend]] << libtracer
+    h[%w[LD_PRELOAD prepend]] <<  File.join(PKGLIBDIR, name, "#{lib}.so")
     h["LTTNG_UST_#{name.upcase}_PROFILE"] = 1 if OPTIONS[:profile]
     h["LTTNG_UST_#{name.upcase}_VERBOSE"] = 1 if LOGGER.level <= Logger::DEBUG
   end
